apps/system/networking/traefik/error-pages.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
  labels:
    app.kubernetes.io/name: error-pages
    app.kubernetes.io/component: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: error-pages
  template:
    metadata:
      labels:
        app.kubernetes.io/name: error-pages
    spec:
      containers:
        - name: error-pages
          image: ghcr.io/tarampampam/error-pages:3.4.1
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages-svc
  labels:
    app.kubernetes.io/name: error-pages
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: error-pages
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
