apps/system/networking/traefik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  labels:
    pool: internal-traefik-lb-pool
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: "traefik"
  externalTrafficPolicy: Local
  trafficDistribution: PreferSameNode # 1.35 feature
  ports:
    - name: websecure
      port: 443
      targetPort: 9443
      protocol: TCP
    - name: websecure-http3
      port: 443
      targetPort: 9443
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dmz
  labels:
    pool: traefik-dmz-pool
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app.kubernetes.io/name: "traefik"
  externalTrafficPolicy: Local
  trafficDistribution: PreferSameNode # 1.35 feature
  ports:
    - name: dmz
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: dmz-http3
      port: 443
      targetPort: 8443
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  labels:
    app.kubernetes.io/name: "traefik"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: "traefik"
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
      protocol: TCP
