apps/system/networking/traefik/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-traefik-perimeter"
spec:
  description: "Allows external traffic to Traefik (80/443) and allows Traefik to talk to k8s API and backend services."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik

  ingress:
    # Rule 1: Allow public internet and cluster to DMZ ports (8443)
    - fromEntities:
        - "world"
        - "cluster"
      toPorts:
        - ports:
            # === DMZ entrypoint ===
            - port: "8443"
              protocol: "UDP"
            - port: "8443"
              protocol: "TCP"

    # Rule 2: Allow cluster, host, and remote-node to internal websecure (9443)
    - fromEntities:
        - "cluster"
        - "host"
        - "remote-node"
      toPorts:
        - ports:
            # === Internal websecure entrypoint ===
            - port: "9443"
              protocol: "UDP"
            - port: "9443"
              protocol: "TCP"

    # Rule 3: Allow trusted internal LAN, VLANs, and Tailscale VPN to internal websecure (9443)
    - fromCIDR:
        - "10.10.1.0/24"
        - "192.168.1.0/24"
        - "192.168.4.0/24"
        - "192.168.11.0/24"
        - "192.168.29.0/24"
        - "100.64.0.0/10"
      toPorts:
        - ports:
            # === Internal websecure entrypoint ===
            - port: "9443"
              protocol: "UDP"
            - port: "9443"
              protocol: "TCP"

    # Rule 4: Allow Prometheus in observability namespace to scrape metrics (9100)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9100"
              protocol: "TCP"


  egress:
    # Rule 1: Allow Traefik to talk to kube-apiserver
    - toEntities:
        - "kube-apiserver"
        - "cluster"
        - "world"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-traefik-internal-services"
spec:
  description: "Allow Traefik to access internal error-pages service."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: "error-pages"
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: "traefik"
            k8s:io.kubernetes.pod.namespace: "traefik"
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
